1.0-pre3
Added: Selected patches list to show the order of installed patches.
Added: Touhou 17 support.
Changed: You can now resize the window to  smaller size than default. (buggy at the moment)
Fixed: Appdata/Replay folder being undetectable.
Fixed: Infinite loop when searching for thcrap repositories.
Fixed: local repositories having higher priority than thcrap.

1.0-pre2 (18/04/2019)
Added: thcrap Profile Editor. Lets you select patches from a list and configure the game list manually. The repository search starts at a configurable Url. Offline-only builds will also be released without this feature from now on.
Added: Customizable text color for buttons + the ability to disable the text or banner entirely.
Added: Saved states for the random games list.
Changed: Custom game categories no longer save their key name in the config (hopefully since they are no longer needed).
Changed: The File Select Dialog will now start from the last place a file was selected.
Changed: Custom banners now stretch to fit the button.
Changed: The settings in the settings tab will now only save when switching tabs or closing the program.
Fixed: Background pictures for games being one pixel off.
Fixed: Double Dealing Character typo.
Fixed: Custom banner checkbox not saving.
Fixed: Tab order for the controls.
Fixed: Tray icon's custom games list adding games to their parent category.
Fixed: Not changing the name while renaming custom games/categories would result in an error.
Fixed: Adding the same custom game multiple times. (As long as the path is the exact same)
Fixed: Expanding/Collapsing a custom game category deselecting it.
Fixed: thcrap's files appearing in the launcher's directory.
Fixed: Hisoutensoku and Double Spoiler having the wrong numbers.
Fixed: The banner size label not showing up on the configuration form.
Fixed: Smaller buttons will now show a tooltip with the full text when translated text does not fit in them.
Optimized code